# Async_API_sprint_2

src/: Dockerfile  constants.py  docker-compose.yml  main.py  pyproject.toml  routes.py  utils.py
src/api/v1/: film.py  genre.py  person.py  smoke.py
src/core/: config.py
src/db/: elastic.py  redis.py
src/models/: film.py  genre.py  person.py
src/nginx/: backend.conf
src/services/: base.py  base_cache.py  base_storage.py  film.py  genre.py  person.py
src/tests/functional/: .env-tests-sample  conftest.py  constants.py  docker-compose.yml  factories.py  settings.py
src/tests/functional/fixtures/: initial_data.json
src/tests/functional/src/: test_films.py  test_smoke.py
src/tests/functional/utils/: es_helpers.py  wait_to_start.sh
