[tool.poetry]
name = "src"
version = "0.1.0"
description = "FastAPI app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
elasticsearch = "^7.14.0"
uvicorn = "^0.14.0"
orjson = "^3.6.1"
aiohttp = "^3.7.4"
aioredis = "1.3.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
aiohttp = "^3.7.4"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
